# polyuhf

./: .gitignore  PrimeFields.java  README.md  clean_up.sh  clear_pycache.sh  compiler  correctness_tests.sh  driver_fieldsweep.sh  fig_16kb.sh  fig_fieldsweep.sh  fig_hashing_performance.sh  fig_model.sh  find-todos.sh  functions.txt  linux_perf_helpers.txt  meeting.txt  new-questions.md  op-list.txt  overview.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_tests.sh  runner  runner.sh  test_all.sh  todo.txt
configs/: gf116_arm.toml  gf116_arm_karatsuba.toml  gf116_avx2.toml  gf116_avx2_karatsuba.toml  gf116_neon.toml  gf116_neon_karatsuba.toml  gf130_arm.toml  gf130_avx2.toml  gf130_neon.toml  gf226_arm.toml  gf226_arm_karatsuba.toml  gf226_avx2.toml  gf226_avx2_karatsuba.toml  gf226_neon.toml  gf226_neon_karatsuba.toml
configs/fields/: gf116.toml  gf130.toml  gf226.toml
configs/representations/: arm_v64x2_l15.toml  arm_v64x2_l18.toml  arm_v64x2_l18_karatsuba.toml  avx2_v64x4_l15.toml  avx2_v64x4_l18.toml  avx2_v64x4_l18_karatsuba.toml  neon_v64x2_l15.toml  neon_v64x2_l18.toml
configs/targets/: apple_m3_arm.toml  apple_m3_neon.toml  x86_64_avx2.toml
configs/workflows/: default.toml
data/: benchpoly1305_avx2.c  benchpoly1305_neon.c  predicted_cycles.csv
data/16kb/: avx2_data.csv  neon_data.csv
data/fieldsweep/: mmh_neon_data.csv  neon_data.csv  poly1305_neon_data.csv
data/hashing_performance/: avx2_data.csv  neon_data.csv  neon_data_af.csv  neon_data_div3.csv  neon_hkm_iter_116_3_kara1_ur1_data.csv  neon_mmh_116_3_kara1_ur2_data.csv  neon_mmh_226_5_kara1_ur2_data.csv  neon_nmh_116_3_kara1_ur2_data.csv  neon_sqh_116_3_kara1_ur2_data.csv
figures/: 16kb.py  field_performance.py  field_speedup.py  fieldsweep.py  hashing_performance.py  predictions.py
modules/: foldl_dummy.txt  hkm.txt  hkm_iter.txt  hkm_rewrite.py  if-else.txt  indexcall.txt  load_store.txt  mmh.txt  nmh.txt  poly1305.txt  sqh.txt
playground/: CMakeLists.txt  candidates.py  correctness_tests.cpp  datastructures.h  deterministic_sequence.py  field_arithmetic.cpp  field_arithmetic.h  mmh.cpp  mmh.h  sbox.h  sboxsum.py
programs/: addition.txt  call.txt  debug.txt  exponentiation.txt  factorial.txt  hkm.txt  if-else.txt  indexcall.txt  load_store.txt  mmh.txt  multiplication.txt  nmh.txt  poly1305.txt  sqh.txt  squareto1.txt
report/: .$overview.drawio.bkp  Makefile  abstract.tex  appendix.tex  apt-packages.txt  chapter_background.tex  chapter_codegen_runtime.tex  chapter_compiler_design.tex  chapter_conclusion.tex  chapter_correctness_validation.tex  chapter_dsl_design.tex  chapter_evaluation.tex  chapter_introduction.tex  chapter_performance_model.tex  chapter_related_work.tex  instructions_list.txt  introduction.tex  refs.bib  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.out  thesis.tex  thesis.thm  thesis.toc
report/eth-template/: extrapackages.tex
report/import_figures/: .$overview.drawio.bkp  fieldsweep_performance_neon_mmh.pgf  fieldsweep_performance_neon_nmh.pgf  fieldsweep_performance_neon_sqh.pgf  fieldsweep_speedup_neon_mmh.pgf  fieldsweep_speedup_neon_nmh.pgf  fieldsweep_speedup_neon_sqh.pgf  hashing_performance_gf_avx2_116-3.pgf  hashing_performance_gf_avx2_226-5.pgf  hashing_performance_gf_neon_116-3.pgf  hashing_performance_gf_neon_116-3_Karatsuba.pgf  hashing_performance_gf_neon_116-3_schoolbook.pgf  hashing_performance_gf_neon_226-5.pgf  hashing_performance_gf_neon_226-5_Karatsuba.pgf  hashing_performance_gf_neon_226-5_schoolbook.pgf  overview.drawio  predicted_v_actual_cycles.pgf
report/latex/: .gitignore  Makefile  abstract.tex  chapter_background.tex  chapter_codegen_runtime.tex  chapter_compiler_design.tex  explanations_to_remove.tex  extrapackages.tex  refs.bib  sections.tex  student_writeup.tex  thesis.tex  toc.md
src/: compiler.py  config.py  field_configuration.py  field_settings.py  helpers.py  main.py  pyproject.toml  runner.py  settings.py  typechecker.py  typesystem.py  utils.py
src/analysis/: graph.py  graphs.py  model.py  opcount.py  perf_benchmark.py
src/automatic_tests/: autotests.j2  boost_cpp_emitter.py
src/codegen/: code_generator.py  formatter.py  generator.py
src/codegen/templates/: add.j2  bigint.j2  bigint_arm.j2  carry.j2  datastructures_c.j2  datastructures_h.j2  full_reduction.j2  header.j2  mul.j2  mul_karatsuba.j2  mul_schoolbook.j2  perf.c.j2  prime_overflow.j2  source.j2  square_schoolbook.j2  store.j2  vadd_arm.j2  vadd_avx2.j2  vcarry_arm.j2  vcarry_avx2.j2  vcarry_neon.j2  vload_arm.j2  vload_avx2.j2  vload_neon.j2  vmul_arm.j2  vmul_karatsuba_arm.j2  vmul_karatsuba_avx2.j2  vmul_karatsuba_neon.j2  vmul_schoolbook_arm.j2  vmul_schoolbook_avx2.j2  vsquare_schoolbook_arm.j2  vsquare_schoolbook_avx2.j2
src/cpp/: CMakeLists.txt  Makefile  addition.h  addition_tests.cpp  driver.cpp  exponentiation.h  exponentiation_tests.cpp  hashing_tests.cpp  hkm_tests.cpp  little_endian_hex.cpp  little_endian_hex.h  load_store_tests.cpp  main.cpp  mmh.h  mmh_tests.cpp  multiplication.h  multiplication_tests.cpp  nmh.h  nmh_tests.cpp  performance.c  poly1305-rfc-test-vectors.json  poly1305.cpp  poly1305.h  poly1305_ref.cpp  poly1305_ref.h  poly1305_testcases_loader.hpp  poly1305_tests.cpp  polynomial_hashing_tests.cpp  references.cpp  sqh.h  sqh_tests.cpp  test_runner.cpp  tests.cpp  tsc_x86.c  tsc_x86.h  util.hpp
src/cpp/correctness/: CMakeLists.txt
src/cpp/measurements/: kperf.h  tsc_x86.h  vct_arm.h
src/cpp/performance/: CMakeLists.txt
src/ir/: env.py  ir_builder.py  ir_nodes.py  ir_pretty_printing.py  lower.py  nodes.py  types.py
src/ir/c/: c_nodes.py  lower_imperative_ir.py
src/ir/c_like/: c_nodes.py  lower_to_c_like.py
src/ir/high_level/: lower_ast.py  nodes.py  (+1 more)
src/parsing/: PolyUHF.g4  PolyUHF.interp  PolyUHF.tokens  PolyUHFLexer.interp  PolyUHFLexer.py  PolyUHFLexer.tokens  PolyUHFParser.py  PolyUHFVisitor.py  antlr4  build_grammar.sh  frontend.py  nmh.txt  nmh_simple.txt  parser.py
src/programs/: nmh.txt
src/templates/: datastructures.j2  guard_and_includes.j2  load_unload.j2  scalar_prime_field_ops.j2
(+21 files in other folders)
